<resources>
    <string name="app_name">Chanjo</string>
    <string name="LogInT">Ingia</string>
    <string name="PhoneT">Phone No</string>
    <string name="PassT">Password</string>
    <string name="EntT">Ingia</string>
    <string name="Query">Huna akaunti? Anzisha!</string>
    <string name="rEGt">Sajili</string>
    <string name="uSERt">UserName</string>
    <string name="pHONt">Phone No</string>
    <string name="pASSt">Maneno Ya Siri</string>
    <string name="pASSAt">Hakikisha</string>
    <string name="sIGNt">Kubali</string>
    <string name="advN">Weka Jina</string>
    <string name="_codeT">+254</string>
    <string name="tITL">Hello</string>
    <string name="nmbr">Nambari Ya Simu</string>
    <string name="mnn">Maneno Ya Siri</string>
    <string name="retrn">return</string>
    <string name="hme">Nyumbani</string>
    <string name="kuhusu">Kuhusu</string>
    <string name="watoto_wangu">Watoto    Wangu</string>
    <string name="ratiba_ya_cdc">Ratiba Ya CDC</string>
    <string name="toka">Toka</string>
    <string name="watoto_w">Watoto Wangu</string>
    <string name="ongeza_mtoto">Ongeza Mtoto</string>
    <string name="back">back</string>
    <string name="tarehe_ya_kuzaliwa">Tarehe Ya Kuzaliwa:</string>
    <string name="kwanza">Weka Tarehe ya chanjo ya kwanza</string>
    <string name="save">Weka</string>
    <string name="bac">bac</string>
    <string name="maelezo_ya_mtoto">Maelezo Ya Mtoto</string>
    <string name="jina">Jina la Mtoto</string>
    <string name="siku">Siku ya Kuzaliwa:</string>
    <string name="ongeza">Ongeza</string>
    <string name="chanjo">CHANJO</string>
    <string name="desc">Chanjo ni jukwaa kwenye simu inayowezesha kina mama kutazama tarehe za chanjo za watoto wao. Okoa Mtoto!!</string>
    <string name="ic">ic</string>
    <string name="ratib">Ratiba Ya CDC</string>
    <string name="vacc">Chanjo</string>
    <string name="umri">Umri</string>
    <string name="bcg_opv_polio">BCG, OPV(Polio)</string>
    <string name="kuza">Siku ya kuzaliwa</string>
    <string name="dpt_diphtheria_opv">DPT(Diphtheria),OPV</string>
    <string name="wiki_6">Wiki 6</string>
    <string name="dpt_opv">DPT, OPV</string>
    <string name="wiki_10">Wiki 10</string>
    <string name="measles">Measles</string>
    <string name="miezi_9">Miezi 9</string>
    <string name="yellow_fever">Yellow Fever</string>
    <string name="mnt">Miezi 9</string>
    <string name="english">English</string>
    <string name="swahili">Swahili</string>

    <string name="jinA">Jina</string>
    <string name="nambari_ya_SImu">Nambari Ya Simu</string>
    <string name="passd">Maneno Ya Siri</string>
    <string name="hakiki_pword">Hakiki Password</string>
    <string name="yeAr">mwaka</string>
    <string name="mNth">mwezi</string>
    <string name="sKu">siku</string>
    <string name="tarehe">Tarehe</string>
    <string name="chJ">Chanjo</string>
    <string name="UmR">Umri</string>
    <string name="bcg_opv_po">BCG,OPV(Polio)</string>
    <string name="siku_kuzaliwa">Siku ya Kuzaliwa</string>
    <string name="dpt_deria_opv">DPT(Diphtheria),OPV</string>
    <string name="wii_6">Wiki 6</string>
    <string name="dpt_ov">DPT, OPV</string>
    <string name="wi_10">Wiki 10</string>
    <string name="meles">Measles</string>
    <string name="mzi_9">Miezi 9</string>
    <string name="yellow_fver">Yellow Fever</string>
    <string name="mii_9">Miezi 9</string>
    <string name="chagua_lugha">Chagua Lugha:</string>
    <string name="year">mwaka</string>
    <string name="month">mwezi</string>
    <string name="settings">Maelezo</string>


</resources>
