<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mom"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ratib"
        android:id="@+id/txtCdc"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff"
        android:typeface="serif" />


    <TableLayout
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#b9f7ecb4">

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/vacc"
                android:id="@+id/txtVacc"
                android:layout_column="1"
                android:layout_width="190dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="190dp"
                android:layout_height="45dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/umri"
                android:id="@+id/txtAge"
                android:gravity="center"
                android:layout_column="2"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </TableRow>
        <View
            android:layout_height="2dip"
            android:background="#FF909090" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bcg_opv_polio"
                android:id="@+id/textView6"
                android:layout_column="1"
                android:gravity="center"
                android:layout_height="40dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/kuza"
                android:id="@+id/textView7"
                android:layout_column="2"
                android:gravity="center"/>
        </TableRow>

        <View
            android:layout_height="0.7dp"
            android:background="#FF909090" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dpt_diphtheria_opv"
                android:id="@+id/textView8"
                android:layout_column="1"
                android:gravity="center"
                android:layout_height="40dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/wiki_6"
                android:id="@+id/textView9"
                android:layout_column="2"
                android:gravity="center"
                />
        </TableRow>

        <View
            android:layout_height="0.5dip"
            android:background="#FF909090" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dpt_opv"
                android:id="@+id/textView10"
                android:layout_column="1"
                android:layout_height="40dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/wiki_10"
                android:id="@+id/textView11"
                android:layout_column="2"
                android:gravity="center"/>
        </TableRow>

        <View
            android:layout_height="0.5dip"
            android:background="#FF909090" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/measles"
                android:id="@+id/textView12"
                android:layout_column="1"
                android:layout_height="40dp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/miezi_9"
                android:id="@+id/textView13"
                android:layout_column="2"
                android:gravity="center"/>
        </TableRow>

        <View
            android:layout_height="0.7dip"
            android:background="#FF909090" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/yellow_fever"
                android:id="@+id/textView14"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mnt"
                android:id="@+id/textView15"
                android:layout_column="2"
                android:gravity="center"/>
        </TableRow>

        <View
            android:layout_height="0.5dip"
            android:background="#FF909090" />

    </TableLayout>
</LinearLayout>