<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eva.example.com.chanjo.Prof"
    android:background="@drawable/mom">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#9dd0cfcf">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="143dp"
        android:id="@+id/lnrlyt">

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText1"

            android:hint="@string/sKu" />
        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_below="@+id/imgSve"
            android:layout_toLeftOf="@+id/txtDate"
            android:layout_toStartOf="@+id/txtDate"
            android:hint="@string/mNth" />
        <EditText
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_below="@+id/imgSve"
            android:layout_toLeftOf="@+id/txtDate"
            android:layout_toStartOf="@+id/txtDate"
            android:hint="@string/yeAr" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/imgSve"
            android:layout_below="@+id/txtDate"
            android:layout_alignRight="@+id/txtUmr"
            android:layout_alignEnd="@+id/txtUmr" />



    </LinearLayout>


    <TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tableLayout"
    android:background="#cbf7ecb4"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="210dp"
        >

    <View
        android:layout_height="1dp"
        android:background="#FF909090"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tarehe"
            android:layout_height="50dp"
            android:layout_width="115dp"
            android:gravity="center"
            android:id="@+id/txtIss"
            android:textStyle="bold"
            android:layout_column="0" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/chJ"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/txtChnj"
            android:layout_column="1" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/UmR"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/txtUmri"
            android:layout_column="2" />

    </TableRow>
    <View
        android:layout_height="1dp"
        android:background="#FF909090"/>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/txtChnj1"
            android:layout_column="0" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bcg_opv_po"
            android:layout_width="120dp"

            android:layout_height="40dp"
            android:id="@+id/textView16"
            android:layout_column="1"
            android:textSize="15dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/siku_kuzaliwa"
            android:id="@+id/textView17"
            android:layout_column="2"
            android:textSize="16dp" />
    </TableRow>

    <View
        android:layout_height="0.7dp"
        android:background="#FF909090"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/txtChnj2"
            android:layout_column="0" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dpt_deria_opv"
            android:layout_height="40dp"
            android:layout_width="120dp"

            android:id="@+id/textView18"
            android:layout_column="1"
            android:textSize="15dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/wii_6"
            android:id="@+id/textView19"
            android:layout_column="2" />
    </TableRow>
    <View
        android:layout_height="0.1dp"
        android:background="#FF909090"/>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/txtChnj3"
            android:layout_column="0" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dpt_ov"
            android:layout_height="40dp"
            android:layout_width="120dp"

            android:id="@+id/textView20"
            android:layout_column="1"
            android:textSize="15dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/wi_10"
            android:id="@+id/textView21"
            android:layout_column="2" />
    </TableRow>

    <View
        android:layout_height="0.1dp"
        android:background="#FF909090"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/txtChnj4"
            android:layout_column="0" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/meles"
            android:layout_height="40dp"
            android:layout_width="120dp"

            android:id="@+id/textView22"
            android:layout_column="1"
            android:textSize="15dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mzi_9"
            android:id="@+id/textView23"
            android:layout_column="2" />
    </TableRow>

    <View
        android:layout_height="0.7dp"
        android:background="#FF909090"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rowChnj">

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtChnj5"
            android:layout_column="0" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/yellow_fver"
            android:layout_height="40dp"
            android:layout_width="120dp"

            android:id="@+id/textView24"
            android:layout_column="1"
            android:textSize="15dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mii_9"
            android:id="@+id/textView25"
            android:layout_column="2" />
    </TableRow>
    <View
        android:layout_height="0.1dp"
        android:background="#FF909090"/>



</TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtShw"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtDate"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tarehe_ya_kuzaliwa"
        android:id="@+id/textView3"
        android:layout_below="@+id/txtShw"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtUmr"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="17sp" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgBck"
        android:layout_alignTop="@+id/txtShw"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/bac"
        android:background="@android:color/transparent" />

    </RelativeLayout>


    <!--<ImageButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/imgSve"-->
        <!--android:layout_marginLeft="100dp"-->
        <!--android:layout_alignBottom="@+id/edtTarhe"-->
        <!--android:layout_toRightOf="@+id/edtTarhe"-->
        <!--android:layout_toEndOf="@+id/txtDate"-->
        <!--android:src="@android:drawable/ic_menu_save"-->
        <!--android:background="#000000"-->
        <!--android:visibility="visible" />-->



</RelativeLayout>
