<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eva.example.com.chanjo.home"
    android:background="@drawable/mom">

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hme"
        android:id="@+id/txtHme"
        android:layout_alignParentTop="true"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        >

    </TextView>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:background="#9dd0cfcf"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:paddingBottom="10dp">
    <Button
            android:layout_width="160dp"
            android:layout_height="168dp"
            android:text="@string/kuhusu"
            android:id="@+id/btn1"
            android:typeface="monospace"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="#7b868a"
            android:layout_alignTop="@+id/btn2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="25dp"/>

        <Button
            android:layout_width="137dp"
            android:layout_height="243dp"
            android:text="@string/watoto_wangu"
            android:id="@+id/btn2"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_rowSpan="2"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace"
            android:background="#7b868a"
            android:layout_marginTop="79dp"
            android:layout_toRightOf="@+id/btn1"
            android:layout_toEndOf="@+id/btn1" />

        <Button
            android:layout_width="140dp"
            android:layout_height="118dp"
            android:text="@string/ratiba_ya_cdc"
            android:id="@+id/btn3"
            android:typeface="monospace"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="#7b868a"
            android:layout_below="@+id/btn1"
            android:layout_alignRight="@+id/btn1"
            android:layout_alignEnd="@+id/btn1"
            android:layout_marginTop="5dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toka"
        android:id="@+id/btnOut"
        android:textStyle="bold"
        android:layout_below="@+id/btn2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"/>
</RelativeLayout>


</RelativeLayout>
