<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eva.example.com.chanjo.about"
    android:background="@drawable/mom">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9dd0cfcf"
        android:paddingBottom="10dp"
        android:layout_marginTop="60dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chanjo"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="150dp"
        android:textColor="#267abf"
        android:id="@+id/textView2"
        android:typeface="serif" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:layout_marginTop="230dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:typeface="serif"
        android:background="#96267abf" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginBottom="62dp"
        android:src="@drawable/chnj"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/ic" />

    </RelativeLayout>

</RelativeLayout>
